--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="blocitoff">
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Bloc Base Project</title>
+    <title>Blocitoff</title>
     <link rel="stylesheet" href="/styles/main.css">
 </head>
-<body>
-    <h4>Hello, World???</h4>
-    <script src="/scripts/app.js"></script>
-</body>
+    <body>
+        <ui-view></ui-view>
+
+        <h4>Hello, World???</h4>
+
+        <!-- Angular -->
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+
+        <!-- AngularUI Router -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+
+        <!-- FireBase -->
+        <script src="https://www.gstatic.com/firebasejs/4.5.2/firebase.js"></script>
+        <!-- AngularFire -->
+        <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+        <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyBWz7pvjXMYPdY5KzcLljh24Y3MEywIlQk",
+            authDomain: "blocitoff-f3812.firebaseapp.com",
+            databaseURL: "https://blocitoff-f3812.firebaseio.com",
+            projectId: "blocitoff-f3812",
+            storageBucket: "blocitoff-f3812.appspot.com",
+            messagingSenderId: "229941630143"
+        };
+        firebase.initializeApp(config);
+        </script>
+
+        <!-- Application Files -->
+        <script src="/scripts/app.js"></script>
+
+    </body>
 </html>
