--- a/app/index.html
+++ b/app/index.html
@@ -3,12 +3,13 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Blocitoff</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/main.css">
 </head>
     <body>
         <ui-view></ui-view>
 
-        <h4>Hello, World???</h4>
+        <h4>blocitoff</h4>
 
         <!-- Angular -->
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
@@ -18,8 +19,11 @@
 
         <!-- FireBase -->
         <script src="https://www.gstatic.com/firebasejs/4.5.2/firebase.js"></script>
+        
         <!-- AngularFire -->
         <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase.js"></script>
+        
         <script>
         // Initialize Firebase
         var config = {
@@ -35,6 +39,7 @@
 
         <!-- Application Files -->
         <script src="/scripts/app.js"></script>
-
+        <script src="/scripts/controllers/HomeCtrl.js"></script>
+        <script src="/scripts/factories/Task.js"></script>
     </body>
 </html>
