--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,8 @@
         </nav>
         <ui-view></ui-view>
 
-        
+        <!-- Moment JS  for Time Stamping -->
+        <script src='https://momentjs.com/downloads/moment.min.js'></script>
 
         <!-- Angular -->
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
